Add meta tag for google-site-verification

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="8dnGoEym86tatfnIIm2K2dwjJZyHwnlrZoV_AYfUYZ4" />
   <meta charset="utf-8">
   <title>ThinkAIToday</title>
   <base href="/">
